# steambench

.devcontainer/: devcontainer.json
.ona/: automations.yaml
claude/: .gitignore  CONNECTING_GEFORCE_NOW.md  README.md
claude/agents/: __init__.py  baselines.py  gamepad_agents.py  hamiltonian_snake.py  heuristic_2048.py  heuristic_catcher.py  heuristic_connect4.py  heuristic_dodger.py  heuristic_flappy.py  heuristic_forager.py  heuristic_minesweeper.py  heuristic_phantom.py  heuristic_rally.py  heuristic_snake.py  heuristic_sokoban.py  heuristic_storm.py  heuristic_tetris.py  heuristic_turret.py  heuristic_volley.py  llm_agent.py  run_demo.py
claude/engine/: pyproject.toml
claude/engine/steambench/: __init__.py  catalog.py  difficulty.py  ingest.py  scoring.py
claude/engine/tests/: test_difficulty.py  test_scoring.py
claude/examples/: example_agent.py
claude/harness/: pyproject.toml
claude/harness/steambench_harness/: __init__.py  client.py  episode.py  gamepad.py  protocol.py  realgame.py  registry.py  rng.py
claude/harness/steambench_harness/envs/: __init__.py  catcher.py  connect4.py  dodger.py  flappy.py  forager.py  game2048.py  minesweeper.py  phantom.py  rally.py  snake.py  sokoban.py  storm.py  tetris.py  turret.py  volley.py
claude/harness/tests/: test_envs.py  test_gamepad.py  test_rng.py
claude/runtime/: _gfn_drive.py  _gfn_operate.py  browserbase_browser_daemon.py  browserbase_gfn.py  cua_io_test.py  cua_latency.py  e2b_browser_daemon.py  (+20 more)
codex/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json
(+327 files in other folders)
