[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steambench-harness"
version = "0.1.0"
description = "SteamBench agent harness: gym-style env protocol, deterministic arcade games, run records, and replay-verification."
requires-python = ">=3.9"
dependencies = []  # stdlib-only core; LLM agents bring their own SDK

[project.optional-dependencies]
dev = ["pytest>=7"]
openai = ["openai>=1.0"]

[tool.setuptools.packages.find]
include = ["steambench_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
